@startuml
'https://plantuml.com/class-diagram
hide empty methods
hide empty attributes
skinparam classAttributeIconSize 0

class PortManager{
    -name
}

class Company{}

class CargoManifest{
    -cargoManifestId
}

class Container{
    -containerId
    -payload
    -tare
    -gross
    -isoCode
}

class TruckTrip{
    -truckID
    -departure_location_id
    -arrival_location_id
    -loading_cargo_id
    -unloading_cargo_id
    -est_departure_date
    -est_arrival_date
    -real_departure_date
    -real_arrival_date
}

class Truck {
    -truckID
}

class Warehouse{
    -warehouseID
    -name
    -maxCapacity
    -locationID
}

PortManager "1" -- "1..*" TruckTrip : analyses >
Company "1" -- "1..*" Truck : owns >
Truck "1" -- "1..*" TruckTrip : owns >
CargoManifest "1..*" -- "1..*" Container : contains >
TruckTrip "1" -- "1..2" CargoManifest : contains >
Warehouse "*" -- "*" Container : has

@enduml